--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
   "scripts": {
@@ -34,6 +33,8 @@
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "jest-cli": "^20.0.4"
+    "jest-cli": "^20.0.4",
+    "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1"
   }
 }
