--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
     "jest-cli": "^20.0.4",
     "react-dom": "^16.13.1",
     "react-test-renderer": "^16.13.1"
